# Alphamoo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: .gitkeep
docs/: phase0_compute_profile.md
notebooks/: kaggle_submission.ipynb  phase0_kaggle_measurement.ipynb
scripts/: analyze_click_games.py  download_data.py  phase0_runner.py  test_agent_tracker.py  test_cascade.py  test_hypothesis_generator.py  test_perception.py  test_phase2_loop.py  test_phase3_loop.py  test_reader.py
src/alphamoo/: __init__.py  ablation.py  agent_loop.py  agent_runner.py  agent_tracker.py  cascade_interpreter.py  context_compressor.py  data_mining.py  experiment_planner.py  frame_renderer.py  goal_inference.py  hypothesis_generator.py  llm_real.py  llm_stub.py  near_miss_tracker.py  perception.py  planner_interface.py  py.typed  replay_viewer.py  schemas.py  verifier.py  vtx_reader.py  world_model.py
tests/: conftest.py  test_agent_loop.py  test_agent_runner.py  test_cascade.py  test_context_compressor.py  test_experiment_planner.py  test_goal_inference.py  test_hypothesis_generator.py  test_integration.py  test_near_miss_tracker.py  test_perception.py  test_planner_interface.py  test_schemas.py  test_verifier.py  test_world_model.py
