[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphamoo"
version = "0.4.1"
description = "AlphaMoo — a Bayesian scientific discovery agent for ARC-AGI-3"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "0xKunalsharma"},
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "vortex-data>=0.75",
    "pyarrow>=17.0",
    "numpy>=1.26",
    "scipy>=1.11",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.5",
    "mypy>=1.10",
]
llm = [
    "vllm>=0.10",
    "transformers>=4.54",
    "torch>=2.3",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
]
arc = [
    "arc-agi>=0.1",
]

[project.urls]
Homepage = "https://github.com/0xKunalsharma/Alphamoo"
Repository = "https://github.com/0xKunalsharma/Alphamoo"
Issues = "https://github.com/0xKunalsharma/Alphamoo/issues"
Documentation = "https://github.com/0xKunalsharma/Alphamoo#readme"

[project.scripts]
alphamoo-viewer = "alphamoo.replay_viewer:main"
alphamoo-mine = "alphamoo.data_mining:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
alphamoo = ["py.typed"]

# =============================================================================
# Ruff (linting + formatting)
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common pattern)
    "B905",   # zip() without strict= (we know our data shapes)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False is fine in tests
"scripts/*" = ["N999"]  # script filenames can have underscores

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =============================================================================
# Pytest
# =============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--cov=alphamoo",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring real data",
    "gpu: marks tests requiring GPU",
]

# =============================================================================
# Mypy (type checking)
# =============================================================================
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # too strict for our current state
ignore_missing_imports = true  # vortex, arc_agi, etc. don't ship stubs

[[tool.mypy.overrides]]
module = ["vortex.*", "vllm.*", "arc_agi.*", "scipy.*"]
ignore_missing_imports = true
